--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,10 @@ jobs:
       - uses: actions/checkout@v3
       - run: git submodule update --init --recursive
       - uses: actions/setup-node@v3
-        with: 
+        with:
           node-version: 'lts/Hydrogen'
           cache: 'npm'
+        working-directory: ./ui
       - name: Cache node modules
         uses: actions/cache@v2
         with:
