--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-ui:
     runs-on: ubuntu-latest
+    defaults:
+       run:
+         working-directory: ./ui/
     steps:
       - uses: actions/checkout@v3
       - run: git submodule update --init --recursive
@@ -15,7 +18,6 @@ jobs:
         with:
           node-version: 'lts/Hydrogen'
           cache: 'npm'
-        working-directory: ./ui
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -24,11 +26,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - run: npm ci
-        working-directory: ./ui
       - uses: actions/upload-artifact@master
         with:
           name: ui
-          path: ui/dist
+          path: ./dist
   build:
     runs-on: ubuntu-latest
     steps:
