--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   build-ui:
     runs-on: ubuntu-latest
-    defaults:
-       run:
-         working-directory: ./ui/
     steps:
       - uses: actions/checkout@v3
       - run: git submodule update --init --recursive
@@ -18,12 +15,13 @@ jobs:
         with:
           node-version: 'lts/Hydrogen'
           cache: 'npm'
-          cache-dependency-path: ui/package-lock.json
+          cache-dependency-path: 'ui'
       - run: npm ci
+        working-directory: ./ui/
       - uses: actions/upload-artifact@master
         with:
           name: ui
-          path: ./dist
+          path: ./ui/dist
   build:
     runs-on: ubuntu-latest
     steps:
