--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
           path: ./ui/dist
   build:
     runs-on: ubuntu-latest
+    needs: build-ui
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
