--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: 'stable'
+          go-version-file: 'backend/go.mod'
       - uses: actions/download-artifact@master
         with:
           name: ui
