--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,18 +24,44 @@ jobs:
         with:
           name: ui
           path: ./ui/dist
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     needs: build-ui
+    strategy:
+      matrix:
+        goos: [linux]
+        goarch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
           go-version-file: 'backend/go.mod'
-          cache-dependency-path: 'backend/go.sum'
       - uses: actions/download-artifact@master
         with:
           name: ui
           path: backend/embed/ui
-      - run: go build -o als main.go
+      - name: Build for Linux
         working-directory: ./backend
+        run: |
+          env GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o myapp-${{ matrix.goos }}-${{ matrix.goarch }}
+  build-macos:
+    runs-on: ubuntu-latest
+    needs: build-ui
+    strategy:
+      matrix:
+        goos: [darwin]
+        goarch: [amd64, arm64]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: 'backend/go.mod'
+      - uses: actions/download-artifact@master
+        with:
+          name: ui
+          path: backend/embed/ui
+      - name: Build for Linux
+        working-directory: ./backend
+        run: |
+          env GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o myapp-${{ matrix.goos }}-${{ matrix.goarch }}
+  
