--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,9 @@ name: 'Build'
 
 on:
   workflow_dispatch:
-  release:
-    types: [created]
+  push:
+    tags:
+      - '*'
 
 jobs:
   build-ui:
@@ -43,7 +44,13 @@ jobs:
       - name: Build for Linux
         working-directory: ./backend
         run: |
-          env GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o myapp-${{ matrix.goos }}-${{ matrix.goarch }}
+          env GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o als-${{ matrix.goos }}-${{ matrix.goarch }}
+      - uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: backend/als-${{ matrix.goos }}-${{ matrix.goarch }}
+          asset_name: als-${{ matrix.goos }}-${{ matrix.goarch }}
+          tag: ${{ github.ref }}
   build-macos:
     runs-on: ubuntu-latest
     needs: build-ui
@@ -60,8 +67,14 @@ jobs:
         with:
           name: ui
           path: backend/embed/ui
-      - name: Build for Linux
+      - name: Build for macOS
         working-directory: ./backend
         run: |
-          env GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o myapp-${{ matrix.goos }}-${{ matrix.goarch }}
+          env GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o als-${{ matrix.goos }}-${{ matrix.goarch }}
+      - uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: backend/als-${{ matrix.goos }}-${{ matrix.goarch }}
+          asset_name: als-${{ matrix.goos }}-${{ matrix.goarch }}
+          tag: ${{ github.ref }}
   
